Fixed on Mobile Views

--- a/src/components/LandingV2-Components/Sections/Main/Main.module.css
+++ b/src/components/LandingV2-Components/Sections/Main/Main.module.css
@@ -7,10 +7,9 @@
 	display: flex;
 	width: 100%;
 	max-width: 1200px;
-	height: 700px;
+	height: 650px;
 
-	margin: 0;
-	padding: 400px 0px 190px 0px;
+	margin: 60px 0 0px 0;
 	text-align: center;
 
 	box-sizing: border-box;
@@ -158,6 +157,9 @@
 
 /* MOBILE MEDIUM AND LARGE */
 @media only screen and (max-width: 767px) {
+	.Container {
+		height: 650px;
+	}
 	.Text {
 		width: calc(75% - 10px);
 	}
@@ -198,7 +200,7 @@
 /* PC */
 @media only screen and (min-width: 1024px) {
 	.Container {
-		min-height: 500px;
+		min-height: 700px;
 		padding: 370px 0px 190px 0px;
 	}
 	.Subcontainer {
